# gridtokenx-platform-infa

./: .dockerignore  .env.example  .env.production.example  .gitignore  .gitmodules  CONTRIBUTING.md  CORE_DETAILS.md  Cargo.docker.toml  Cargo.toml  ENV_CONFIG.md  FINAL_PRESENTATION_GUIDE.md  Justfile  Makefile  QWEN.md  README.md  RELEASE.md  TRADING_APP_GUIDE.md  UI_FLOW_TEST_GUIDE.md  USER_ONBOARDING_GUIDE.md  agents.md  benchmark_frameworks.md  benchmark_results.json  cargo_check_result.txt  check_orders.sh  check_output.txt  context-diagram-c4.md  context-diagram.puml  curl_output.txt  data_collection_methodology.md  dev-start.sh  dev-wallet.json  docker-compose.db.yml  docker-compose.dev.yml  docker-compose.yml  final_output.txt  gridtokenx-anchor.code-workspace  gridtokenx-apigateway-anchor.code-workspace  grx.nu  mint.json  minting-sequence-diagram.puml  (+37 more)
.cargo/: config.toml
.qwen/: settings.json  settings.json.orig
.sqlx/: query-00995237309560e82b1cd5325f2bc92fa73d83cb137ac95615f344b71ec14569.json  query-01fa0b32f94d1857a230f6bc2fbeb1b64beb6928f3379a7a9a6f4d0f4254abf3.json  query-04bd0521013dd77043f673ecd7f92e70b1ddb18f41a1ef91160d22f841daf155.json  query-052bec4663334d0c87cd744231836d7d02f5859127aed716c5b1276e0384a014.json  query-052cc6bb821d936839e90e70cb2140fd2216ae45bb759c10e74e3a9d8bdd5312.json  query-082eca7d6926f1db8175f0918c8ff497154e09a59fbd6f9ac9e2034c0ad9736d.json  query-093f824685e86aace3a4e0cc0b6265f6dbd3dd95c77c011b3c8a17c9a3b9a369.json  query-09766a7f1a10fbc232f8cd2a6ac2d7a122e8ea867c4487e3605b777140f1ebe9.json  query-0c5dfc89f8b20eb827d14d8edadc7e0a3d945cee10f65e65969dbe3f4cb9fcac.json  query-0d848387415780a5d52122117ff0a0d99d3fb36f218a13bd660377d8484207b5.json  query-0f08b211745f1eff1e7f12594ae4e411d163ceff8bcd67ba079a93bc3f2f23ec.json  query-105207a8ef385873d72fb4fbbd3acdb518ba3ce0252bb5b21fe269d9fdda4e70.json  query-1085514c8ad029b68a4b681da80c2de3bcaf180b225a097c9ea5e39ef9427a7f.json  query-1629f960d63e58909fc494375cbe11b6bbecafe9ab1e529d102a1a2f7516a17a.json  query-16e6338689c9516d64e8edf92b6f49bf285259cd7506283068092f238e695d7d.json  query-179b2571c1043184456181d528d843fb5583f7cbe0370dc35a3c0f31d068588b.json  query-1b69603babb32b5dbc79ab22ed5b1cad2e527f0dc4bd7dd3b4385f0d50caef26.json  query-1e237fd3317bc220541a7add08fd7e5679254b870eeb61998050fe6b525f1189.json  query-2178241fb650eec5c5fce2315c5ec9099ce131d5ce18f14f04344eafd242b4d6.json  query-22d0a66fe49f91b6d6264cef5f33fecef84b6bdfa5d8ea190b4d31b4435f9647.json  query-239f038a8d2faa9da2d6ea833765c4bcf54ac61ddc7cae1856b7bcae7dc029a6.json  query-23fcd091310ddcad9bd1924fe2323d4900277b8ce0e0c365f8205cd5fc280968.json  query-2956846070648150a3f04a4cc1163b7a17a53cd0e2bc402ee0c90f64d4003674.json  query-2a2abf11eb61f8556f8ca4addd46c3076e68536b496a9ad204ee8c676ada57d7.json  query-2daa13f070aab20e62e5809454845c8752f601df4de79b7093115335e46047ca.json  query-2fb2efebb2edc6811368c0427780650c72a549220eb37ddb901664d2a816c7d3.json  query-32b2197f0264ba297aea17a0e5b97c2e8e3a0c439186bc1557be46d9e6437e49.json  query-35e5b257248c2b039048a3513209bf42bdbce2981d81f4276b63da2db689fc91.json  query-365444d286d161dbaf6959c675bd7976196949a2bb504bffec9bade6b1e49c35.json  query-3ca34f4f041808045dd3695c22fa220f20870b4b6c2a9bb1e6db2d02b2dcf583.json  query-427d74137e6e671878ff9bae42f2f802c651031f0cb11d6cc8d05317d05a9213.json  query-454ee22c94ae3e56284467060c7f062e9c4fd4d3460a5bbe2e8767fc3e3e8aee.json  query-4819395525403a185f638ccceb9efa809d3f46a4cd636114164331ce63409680.json  query-4c0c434f274def49bd079194a8f87e68e502d122dc777251201c1f677caa2b86.json  query-4c4fd20f0c54ab1764da982dcf13f28f000eea5866335ba38db8122867751533.json  query-4cc983bc1cf360478bbedc88f1e3a498916d2d09ea9b21f459f36abc6f72410a.json  query-4ee4ee1da35af0db3c9e64c2643c090ea76995ab6fa0d0d724538d66dfb1e70a.json  query-4fa748cd11e94088d42993ec23a836d4d3b32fead5ba783117f86291c9b2074e.json  query-516e2b635538fc9d1dc2343db41a4699d2f1f5ee4cca4ec58e07ec9c1d23fa15.json  query-52a94e06fa9e435dca7e0e4256fa4321594586ba7da57993a0d078cfcfaf254f.json  (+133 more)
docker/: README.md  WALKTHROUGH.md
docs/: API_REFERENCE.md  FINAL_PRESENTATION_GUIDE.md  FINAL_PROJECT_PRESENTATION.md  GRID_TOKEN_LIFECYCLE.md  IOT_ACCESS_ARCHITECTURE.md  IOT_ACCESS_IMPLEMENTATION.md  IOT_ACCESS_INDEX.md  IOT_ACCESS_SEQUENCE_DIAGRAMS.md  MONITORING_INFRASTRUCTURE.md  NCSTR_2025.md  NCSTR_2025_Presentation.md  ORBSTACK_MIGRATION.md  PLATFORM_DESIGN.md  PRESENTATION_REVEALJS.html  PROTOCOLS.md  SMART_CONTRACT_ARCHITECTURE_TH.md  SYSTEM_ARCHITECTURE_OVERVIEW.md  benchmark_frameworks.md  cash-flow-model.puml  component-anchor-governance.puml  component-anchor-minting.puml  component-anchor-program.puml  component-anchor-registry.puml  component-api-gateway.puml  container-telemetry.puml  container-trading.puml  context-diagram.puml  data_collection_methodology.md  data_flow.puml  data_flow_ascii.txt  data_flow_c4.puml  dual-state-consistency.puml  hybrid-consensus.puml  minting-sequence-diagram.puml  native-apps-mode.md  opentelemetry-integration.md  p2p-energy-trading-paper.md  p2p_matching_plan.md  presentation_architecture.md  presentation_plan.md  (+10 more)
gridtokenx-admin/: README.md  next.config.ts  package-lock.json  package.json
gridtokenx-portal/: package.json
k8s/: .gitkeep  README.md
keypairs/: buyer-wallet.json  dev-wallet.json  energy_token-keypair.json  engineering-department-authority.json  engineering-keypair.json  governance-keypair.json  oracle-keypair.json  registry-keypair.json  seller-wallet.json  trading-keypair.json
monitoring/: DASHBOARD_GUIDE.md  gridtokenx-alerts.yml  oracle_bridge_dashboard.json  prometheus_rules.yml  setup_guide.md
scripts/: app.sh  check_validator_health.sh  cleanup_p2p_env.sh  demo_scenario.sh  demo_user_meter.sh  deploy-local.sh  drop-meter-data.sh  e2e-realtime-trading-2meter.sh  generate_load_test_data.py  init-replica.sh  init_blockchain.sh  init_oracle.sh  listen_ws.py  load_test_meters.csv  register-edge-key.sh  register_admin.sh  register_manual_meter.sh  run_load_test.sh  run_local_load_test.sh  run_with_env.sh  seed_simulator_tokens.sh  send-100-meters.py  (+25 more)
(+299 files in other folders)
