[workspace]
members = [
    "gridtokenx-anchor/programs/*",
    "gridtokenx-anchor/shared/*",
    "gridtokenx-apigateway",
]
# gridtokenx-wasm is excluded — it compiles to wasm32-unknown-unknown and
# solana-zk-token-sdk (zeroize <1.4) conflicts with bcrypt (zeroize ^1.5.4)
# trading program is excluded for the same zeroize conflict (solana-zk-token-sdk)
# — it compiles separately via `anchor build` (BPF target)
exclude = ["gridtokenx-wasm", "gridtokenx-anchor/programs/trading"]
resolver = "2"

# =============================================================================
# Shared Dependencies (use with `dep.workspace = true` in member crates)
# =============================================================================
[workspace.dependencies]
# Anchor ecosystem
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["metadata"] }
anchor-client = "0.32.1"

# Solana SDK
solana-client = "2.3.1"
solana-sdk = "2.3.1"
solana-program = "2.3.0"
solana-compute-budget = "2.3.1"
solana-transaction-status = "2.3.1"
solana-pubsub-client = "2.3.1"

# SPL Tokens - note: apigateway uses 8.0.0 for solana-sdk 2.3.x compatibility
# Anchor programs (BPF) can use 9.0.0 since they compile separately
spl-token = "8.0.0"
spl-associated-token-account = "7.0.0"
mpl-token-metadata = "5.0.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
bincode = "1.3"

# Async Runtime
tokio = { version = "1.48", features = [
    "rt-multi-thread",
    "macros",
    "io-util",
    "time",
    "sync",
    "signal",
    "parking_lot",
] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "2.0"

# =============================================================================
# Profile Optimizations (shared across workspace)
# =============================================================================
[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[profile.dev]
opt-level = 0
codegen-units = 256

[profile.dev.package."*"]
opt-level = 2

[profile.bench]
inherits = "dev"
opt-level = 3
