[workspace]
members = [
    "gridtokenx-anchor/programs/*",
    "gridtokenx-anchor/shared/*",
    "gridtokenx-api",
    "gridtokenx-iam-service",
    "gridtokenx-trading-service",
    "gridtokenx-wasm",
    "gridtokenx-oracle-bridge",
    "gridtokenx-edge-gateway",
    "gridtokenx-smartmeter-simulator/src/rust_sim",
]
# The trading program is excluded because it historically relied on `solana-zk-token-sdk`
# causing legacy `zeroize` conflicts, but mainly because it compiles
# separately via `anchor build` against a BPF target.
# Load test tool is excluded as it's a standalone benchmark utility
# Edge gateway excluded due to hardware-specific dependencies (rppal, MQTT)
exclude = [
    "gridtokenx-anchor/programs/trading",
    "tests/load-test",
    "gridtokenx-edge-gateway",
]
resolver = "2"

# =============================================================================
# Shared Dependencies (use with `dep.workspace = true` in member crates)
# =============================================================================
[workspace.dependencies]
# Anchor ecosystem
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["metadata"] }
anchor-client = "0.32.1"

# Solana SDK
solana-client = "2.3.1"
solana-sdk = "2.3.1"
solana-program = "2.3.0"
solana-compute-budget = "2.3.1"
solana-transaction-status = "2.3.1"

# SPL Tokens - note: apigateway uses 8.0.0 for solana-sdk 2.3.x compatibility
# Anchor programs (BPF) can use 9.0.0 since they compile separately
spl-token = "8.0.0"
spl-token-2022 = "8.0.0"
spl-associated-token-account = "7.0.0"
mpl-token-metadata = "5.0.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
bincode = "1.3"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Async Runtime
tokio = { version = "1.48", features = [
    "rt-multi-thread",
    "macros",
    "io-util",
    "time",
    "sync",
    "signal",
    "parking_lot",
] }
async-trait = "0.1"

# Web Framework
axum = { version = "0.8.7", features = ["macros"] }
tower = "0.5"
tower-http = "0.6.7"

# Database & Caching
sqlx = { version = "0.8", features = [
    "macros",
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "uuid",
    "rust_decimal",
    "migrate",
] }
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }

# Observability
tracing = "0.1"
tracing-subscriber = "0.3"
metrics = "0.24"
metrics-exporter-prometheus = "0.17"

# OpenTelemetry (SigNoz integration)
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "trace", "tls-roots", "metrics"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio", "trace", "metrics"] }
tracing-opentelemetry = "0.32.1"
opentelemetry-semantic-conventions = "0.31.0"

# Authentication & Security
jsonwebtoken = "10.0"
bcrypt = "0.17"
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
pbkdf2 = "0.12"
aes-gcm = "0.10"
ed25519-dalek = "2.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
ulid = { version = "1.0", features = ["serde"] }
thiserror = "2.0"
ipnetwork = "0.21"
rust_decimal = "1.33"
anyhow = "1.0"
bs58 = "0.5"
rand = "0.8"
dotenvy = "0.15"
validator = { version = "0.19", features = ["derive"] }
utoipa = { version = "5.0", features = ["decimal", "chrono", "uuid"] }
dashmap = "6.1.0"
smallvec = { version = "1.13", features = ["union"] }
rdkafka = { version = "0.37", features = ["zstd"] }
futures = "0.3"
config = "0.15.19"
once_cell = "1.19"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
regex = "1.10"
rust_decimal_macros = "1.36"
tokio-test = "0.4"

# gRPC
connectrpc = { version = "0.2.1", features = ["axum", "server", "client"] }
tonic = { version = "0.14", features = ["tls-native-roots"] }

# =============================================================================
# Profile Optimizations (shared across workspace)
# =============================================================================
[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"

[profile.release.build-override]
opt-level = "z"
incremental = false
codegen-units = 1

[profile.dev]
opt-level = 0
codegen-units = 256

[profile.dev.package."*"]
opt-level = 2

[profile.bench]
inherits = "dev"
opt-level = 3
